# HimuToys.FossilSense

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.ps1
crates/fossilsense/: Cargo.toml
crates/fossilsense/src/: call_catalog.rs  call_model.rs  call_service.rs  candidate_service.rs  coloring.rs  completion.rs  completion_history.rs  completion_words.rs  config.rs  includes.rs  indexer.rs  language_builtins.rs  main.rs  model.rs  parser.rs  pathing.rs  progress.rs  project_context.rs  query.rs  reachability.rs  references.rs  resolver.rs  scanner.rs  semantic_benchmark.rs  semantic_model.rs  server.rs  store.rs  store_parser_adapter.rs
crates/fossilsense/src/call_catalog/: compact.rs  grouping.rs  rows.rs  tests.rs
crates/fossilsense/src/coloring/tests/: integration.rs
crates/fossilsense/src/completion/: evidence.rs  intent.rs  ordinary_service.rs  pipeline.rs  prefix_ranking.rs  tests.rs
crates/fossilsense/src/completion/ordinary_service/: providers.rs  tests.rs
crates/fossilsense/src/config/: tests.rs
crates/fossilsense/src/indexer/: candidates.rs  include_edges.rs  parse_pipeline.rs  progress_limiter.rs  tests.rs
crates/fossilsense/src/indexer/tests/: ambiguity.rs  (+3 more)
crates/fossilsense/src/parser/: ast.rs  callables.rs  lexical.rs  tests.rs
crates/fossilsense/src/query/: current_file_overlay.rs  definitions.rs  documentation.rs  hover.rs  local_completion.rs  lsp_kinds.rs  name_index_builder.rs  name_table.rs  signatures.rs  source_excerpt.rs  tests.rs  text.rs  type_resolution.rs
crates/fossilsense/src/references/: tests.rs
crates/fossilsense/src/resolver/: tests.rs
crates/fossilsense/src/server/: call_hierarchy.rs  candidate_context.rs  commands.rs  completion_documentation.rs  completion_handler.rs  definition.rs  document_events.rs  hover.rs  include_completion.rs  indexing.rs  language_server.rs  lsp_adapters.rs  member_completion.rs  navigation.rs  options.rs  possible_targets.rs  project_context_commands.rs  references_handler.rs  semantic_tokens.rs  signature_help.rs  state.rs  symbols.rs  tests.rs  workspace.rs
crates/fossilsense/src/store/: generations.rs  includes.rs  queries.rs  schema.rs  tests.rs  views.rs  writes.rs
crates/fossilsense/tests/: lsp_smoke.rs
(+213 files in other folders)
