[package]
name = "fossilsense"
version = "1.4.0"
edition = "2021"
publish = false

[[bin]]
name = "fossilsense"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bitflags = "2.9"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
rayon = "1.10"
regex = "1.11"
# 0.39 bundles SQLite 3.51.3, the first upstream release containing the
# WAL-reset concurrency corruption fix. Keep `bundled` for self-contained VSIX
# builds and enforce the runtime version in store resilience tests.
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
tower-lsp = "0.20"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.23"
